--- a/analisis/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/calculo_renta_hidrocarburos.Rmd
@@ -2230,14 +2230,16 @@ masa_salarial_oede <- empleo_anual %>%
          anio =as.double(anio))
 
 masa_salarial_hidrocarburos <- masa_salarial_ccnn %>% 
-  select(anio, unidad = unidad_masa_salarial, masa_salarial_ccnn = masa_salarial_total) %>% 
+  select(anio, unidad = unidad_masa_salarial, masa_salarial_extraccion_ccnn= masa_salarial_extraccion, 
+         masa_salarial_total_ccnn = masa_salarial_total) %>% 
   full_join(masa_salarial_oede %>% 
               select(anio, unidad = unidad_masa_salarial, 
-                     masa_salarial_oede =masa_salarial_total)) %>% 
+                     masa_salarial_extraccion_oede= masa_salarial_extraccion,
+                     masa_salarial_total_oede =masa_salarial_total)) %>% 
   full_join(masa_salarial_cepal %>% 
               select(anio, unidad, ms_cepal)) %>% 
-  mutate(ms = case_when(anio < 1996 ~ ms_cepal,
-                        anio >= 1996 ~masa_salarial_oede)) %>% 
+  # mutate(ms = case_when(anio < 1996 ~ ms_cepal,
+  #                       anio >= 1996 ~masa_salarial_oede)) %>% 
   arrange(anio)
 masa_salarial_hidrocarburos  
 
@@ -3526,7 +3528,7 @@ Se presentan a continuación distintas estimaciones sobre la magnitud de riqueza
 
 
 
-* CCNN (*vbp_va_ci_ccnn* y *pv_hidrocarburos_ccnn*)
+* CCNN (*ccnn_oficial*)
   + Valores contables oficiales de las Cuentas Nacionales (sólo disponible para el período 2004-2012). Dado que se presentan series de VBP y VA, se pudo estimar el CI como la diferencia de dichas cuentas. Se procedió a separar el VBP a partir del peso del VBP de los servicios de apoyo a la extracción sobre el VBP de extracción de petróleo y gas, presente en el Cuadro de Utilización de Oferta (COU) de 2004 de INDEC. Se descontó esta proporción (resultante del 10,7%) del VBP total para obtener un VBP sólo de extracción. Dado que se posee información del salario promedio del sector y el empleo, se pudo obtener la MS resultante, tanto para el total del sector (extracción y servicios relacionados) como para sólo extracción. A partir de estos datos se elaboró un coeficiente que refleja el promedio de la proporción de la MS sobre el VBP que se utilizará en cálculos posteriores de MS total y MS de extracción. 
 
 * Estimación propia con criterio CCNN (*vbp_va_ci_propia*)
@@ -3581,7 +3583,7 @@ Como se mencionó, en todos los casos en los que se presenta dato de consumo int
 Consumo Intermedio, valores oficiales de las CCNN:
 $$ CI_{CCNN} = VBP_{CCNN} -  VA_{CCNN} $$
 Consumo Intermedio, valores estimados bajo criterio de las CCNN:
-$$ CI_{CCNN} = VBP_{CCNN} *  Coef\_tec $$
+$$ CI_{CCNN} = VBP\_extraccion_{CCNN} *  Coef\_tec $$
  
 
 
@@ -3680,6 +3682,9 @@ Donde:
 * Salario y empleo
   + 1960-1996: estimación a partir de aplicación del coeficiente de proporción de la masa salarial sobre el VBP
   + 1996 en adelante: Ministerio de Trabajo, Empleo y Seguridad Social - Observatorio de Empleo y Dinámica Empresarial (OEDE)
+
+* Consumo de capital fijo
+  + Coeficiente de depreciación estimado a partir de Estados Contables de YPF (1998-2018)
 <br>
 
 
@@ -3694,18 +3699,22 @@ PIB Explotación Minas y Canteras en millones de pesos de 1960. 1970-1980](https
 PIB Explotación Minas y Canteras en australes a precios de 1970. 1980-1990](https://datos.gob.ar/dataset/sspm-producto-interno-bruto-sectorial-1980-1990) 
 
 ```{r message=FALSE, warning=FALSE, include=FALSE}
-
-#coef CI
-#MIP
+#MIP 97
 # coeficientes de requerimientos directos
 
-# extraido de MIP 97 a partir de CI/VBP 
-# coef_req_directos <-  0.272264638
+mip_97 <- read_excel("C:/Archivos/Datos/MIP/mip_matriz12.xls", 
+    skip = 7) %>% 
+  select(-"...1") %>% 
+  rename(actividad = "...2")
+  # filter("...2" %in% c( "Usos de la producción nacional a precios básicos",  "Valor bruto de la producción a precios básicos" ))
 
-# extraido de cuadro de utilizacion 2004 a partir de CI/VBP
-coef_tecnico <-  0.369104302
+ci_extraccion <- mip_97[c(126,149), c("actividad" , "Extracción de petróleo, gas, carbón y uranio")]
 
-coef_tecnico_97 <- 0.374125887
+coef_tecnico_97 <- ci_extraccion[1,2]/ci_extraccion[2,2]
+
+
+# coef CUO 2004 a partir de CI/VBP
+# coef_tecnico <-  0.369104302
 
 
 #Peso de los servicios
@@ -3713,18 +3722,36 @@ coef_tecnico_97 <- 0.374125887
 #la suma de las columnas nos da el VBP
 COU <- read_excel("C:/Archivos/Datos/MIP/sh_cou_06_16.xls", 
     skip = 2) %>%
-  rename(sector = "...1",
+  rename(producto = "...1",
          cpc = "...2") %>% 
-  filter(str_detect(sector, "\\d") & !(str_detect(sector, "^N")))
+  filter(str_detect(producto, "\\d") & !(str_detect(producto, "^N"))) %>%
+  group_by(producto) %>% 
+  mutate_all(as.double)
 
 servicio_s_extraccion <-  sum(COU[12])/sum(COU[11])
 nrow(COU)
+
+
+# Depreciación del stock
+consumo_k_fijo_ypf <- (read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultados/balances_arg.csv", 
+    col_types = cols(X1 = col_skip())) %>%
+  filter(empresa == "YPF") %>% 
+  group_by(empresa) %>% 
+  mutate(tasa_depreciacion = depreciaciones/ppye) %>% 
+  summarise(tasa_depreciacion = mean(depreciaciones/ppye)))$tasa_depreciacion
+
+var((read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultados/balances_arg.csv", 
+    col_types = cols(X1 = col_skip())) %>%
+  filter(empresa == "YPF") %>% 
+  group_by(fecha) %>%
+  summarise(tasa_depreciacion = mean(depreciaciones/ppye)))$tasa_depreciacion)
+
 ```
 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-#CCNN
-vbp_va_ci_ccnn <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria-e-hidrocarburos cuentas nacionales.xls",
+#CCNN (datos oficiales)
+ccnn_oficial <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria-e-hidrocarburos cuentas nacionales.xls",
                         sheet = "Cuentas Nacionales", skip = 5) %>% 
   rename(anio = "Año",
          periodo ="Período",
@@ -3749,21 +3776,46 @@ vbp_va_ci_ccnn <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria
   group_by(anio, unidad) %>%
   mutate_all(function(x) {x/10^3}) %>%
   ungroup() %>% 
-  mutate(unidad = "Millones de pesos corrientes",
-         coef_req_extr_y_serv =ci_extraccion_y_servicios_hidrocarburos/vbp_extraccion_y_servicios_hidrocarburos,
-         coef_req_extr = ci_extraccion_hidrocarburos/vbp_extraccion_hidrocarburos) %>% 
-  filter(!(is.na(coef_req_extr_y_serv)))
-vbp_va_ci_ccnn
+  mutate(unidad = "Millones de pesos corrientes") %>% 
+  left_join(masa_salarial_hidrocarburos %>% 
+              select(anio,  unidad,
+                     masa_salarial_total = masa_salarial_total_oede,
+                     masa_salarial_extraccion =masa_salarial_extraccion_oede ), by = c("anio", "unidad")) %>% 
+  mutate(ebe_total = va_extraccion_y_servicios_hidrocarburos - masa_salarial_total,
+         ebe_extraccion = va_extraccion_hidrocarburos -masa_salarial_extraccion) %>% 
+  rename(vbp_extraccion = vbp_extraccion_hidrocarburos,
+         ci_extraccion = ci_extraccion_hidrocarburos,
+         va_extraccion =va_extraccion_hidrocarburos,
+         vbp_total= vbp_extraccion_y_servicios_hidrocarburos , 
+         va_total= va_extraccion_y_servicios_hidrocarburos,
+         ci_total = ci_extraccion_y_servicios_hidrocarburos)
+ccnn_oficial
 
-mean_coef_req_extr_ccnn <- mean(vbp_va_ci_ccnn$coef_req_extr)
-mean_coef_req_extr_ccnn_b <- mean(sum(vbp_va_ci_ccnn$ci_extraccion_hidrocarburos)/
-                                  sum(vbp_va_ci_ccnn$vbp_extraccion_hidrocarburos))
+ccnn_oficial <- ccnn_oficial
+#con base de VBP de elaboracion propia
+mean_coef_ms <-  mean((ccnn_oficial %>% 
+  group_by(anio) %>% 
+  summarise(coef_masa_salarial = masa_salarial/vbp_extraccion) %>% 
+  filter(!(is.na(coef_masa_salarial))))$coef_masa_salarial)
+
+median_coef_ms <-  median((ccnn_oficial %>% 
+  group_by(anio) %>% 
+  summarise(coef_masa_salarial = masa_salarial/vbp_extraccion) %>% 
+  filter(!(is.na(coef_masa_salarial))))$coef_masa_salarial)
+
+
+# estimacion propia coef tecnico
+ccnn_oficial %>% 
+  summarise(coef_req_extr_y_serv =mean(ci_extraccion_y_servicios_hidrocarburos/vbp_extraccion_y_servicios_hidrocarburos, na.rm=T),
+         coef_req_extr = mean(ci_extraccion_hidrocarburos/vbp_extraccion_hidrocarburos, na.rm=T))
+
 
 ```
 
-### Estimación propia con criterio de propio y CCNN
+### Estimación propia con criterio de propio y criterio CCNN
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
+#variables para la estimación 
 precios_y_cantidades <- prod_merge_crudo %>% 
   select(anio, unidad_cant_crudo = unidad, prod_crudo) %>%
   left_join(expo_q_crudo %>% 
@@ -3780,29 +3832,28 @@ precios_y_cantidades <- prod_merge_crudo %>%
               select(anio, unidad_cant_gas= unidad,prod_gas), by = "anio") %>%
   left_join(expo_q_gas_MMBTU %>% select(anio, unidad_cant_gas= unidad, expo_gas)) %>% 
   left_join(precio_mdomundial_gas_MMBTU %>% 
-              select(anio, unidad_precio_gas = unidad, precio_externo_gas), by = "anio") %>% 
+              select(anio, unidad_precio_gas = unidad, precio_externo_gas, precio_expo_gas_comtrade), by = "anio") %>% 
   left_join(precio_interno_gas_mmbtu_usd %>% 
               select(anio,  precio_gas_mdoint)) %>% 
   left_join(tcp_anual_b %>% 
               select(anio, tcp, tcc), by = "anio")
-```
 
-
-```{r echo=FALSE, message=FALSE, warning=FALSE}
 vbp_va_ci_propia <- precios_y_cantidades %>% 
   mutate(crudo_mdo_interno = prod_crudo - expo_crudo,
          expo_gas = replace_na(expo_gas, 0 ),
          gas_mdo_interno = prod_gas - expo_gas,
          unidad_valor_produccion = "Millones de pesos corrientes",
-         vbp_criterio_ccnn = ((crudo_mdo_interno*precio_crudo_mdoint+
+         vbp_tot_criterio_ccnn = ((crudo_mdo_interno*precio_crudo_mdoint+
                                  expo_crudo*precio_me_crudo
                                + gas_mdo_interno * precio_gas_mdoint 
-                               +expo_gas*precio_externo_gas )*tcc)/10^6,
+                               +expo_gas*precio_expo_gas_comtrade )*tcc)/10^6,
+         vbp_extr_criterio_ccnn =vbp_tot_criterio_ccnn*(1-servicios_s_extraccion),
+         ci_tot_criterio_ccnn = vbp_tot_criterio_ccnn *coef_tecnico_97 ,
+         ci_ext_criterio_ccnn = vbp_extr_criterio_ccnn * coef_tecnico_97,
          valor_bruto_crudo = (prod_crudo*precio_me_crudo*tcp)/10^6,
          valor_bruto_gas =   (prod_gas * precio_externo_gas*tcp)/10^6,
-         vbp_criterio_propio = valor_bruto_crudo + valor_bruto_gas, 
-         consumo_intermedio = vbp_criterio_ccnn * coef_tecnico,
-         valor_agregado = vbp_criterio_propio - consumo_intermedio )
+         vbp_tot_criterio_propio = valor_bruto_crudo + valor_bruto_gas,
+         va_tot_propio = vbp_criterio_propio - ci_ext_criterio_ccnn )
 vbp_va_ci_propia
 
 indice_vbp_criterio_ccnn <- vbp_va_ci_propia %>% 
@@ -3824,59 +3875,22 @@ indice_vbp_criterio_ccnn <- vbp_va_ci_propia %>%
 ## Plusvalía total del sector
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-#CCNN
-#con base de cuentas nacionales
-pv_hidrocarburos_ccnn <- vbp_va_ci_ccnn %>% 
-  left_join(masa_salarial_hidrocarburos %>% 
-              select(anio,  unidad,
-                     masa_salarial = masa_salarial_oede), by = c("anio", "unidad")) %>% 
-  mutate(excedente_bruto_explotacion = va_extraccion_y_servicios_hidrocarburos -masa_salarial) %>% 
-  rename(valor_bruto_produccion = vbp_extraccion_hidrocarburos,
-         consumo_intermedio = ci_extraccion_hidrocarburos,
-         valor_agregado= va_extraccion_hidrocarburos)
 
 
-
-#con base de VBP de elaboracion propia
-mean_coef_ms <-  mean((pv_hidrocarburos_ccnn %>% 
-  group_by(anio) %>% 
-  summarise(coef_masa_salarial = masa_salarial/valor_bruto_produccion) %>% 
-  filter(!(is.na(coef_masa_salarial))))$coef_masa_salarial)
-
-median_coef_ms <-  median((pv_hidrocarburos_ccnn %>% 
-  group_by(anio) %>% 
-  summarise(coef_masa_salarial = masa_salarial/valor_bruto_produccion) %>% 
-  filter(!(is.na(coef_masa_salarial))))$coef_masa_salarial)
-
-#coeficiente FD
-# coef_salario <- 0.19
-
-consumo_k_fijo_ypf <- (read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultados/balances_arg.csv", 
-    col_types = cols(X1 = col_skip())) %>%
-  filter(empresa == "YPF") %>% 
-  group_by(empresa) %>% 
-  mutate(tasa_depreciacion = depreciaciones/ppye) %>% 
-  summarise(tasa_depreciacion = mean(depreciaciones/ppye)))$tasa_depreciacion
-
-var((read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultados/balances_arg.csv", 
-    col_types = cols(X1 = col_skip())) %>%
-  filter(empresa == "YPF") %>% 
-  group_by(fecha) %>%
-  summarise(tasa_depreciacion = mean(depreciaciones/ppye)))$tasa_depreciacion)
 
 #restimacion de VBP criterio CCNN
-vbp_ccnn <- vbp_va_ci_ccnn %>% 
+vbp_ccnn <- ccnn_oficial %>% 
   select(anio,unidad, vbp_extraccion_hidrocarburos, 
          va_extraccion_hidrocarburos, ci_extraccion_hidrocarburos) %>% 
   full_join(indice_vbp_criterio_ccnn, by = "anio") %>% 
   arrange(anio) %>% 
   mutate(vbp_extraccion_ccnn = case_when(
-    anio < 2004 ~ vbp_va_ci_ccnn$vbp_extraccion_hidrocarburos[vbp_va_ci_ccnn$anio == 2004] *
+    anio < 2004 ~ ccnn_oficial$vbp_extraccion_hidrocarburos[ccnn_oficial$anio == 2004] *
       vbp_criterio_ccnn_04,
-    anio > 2012 ~ vbp_va_ci_ccnn$vbp_extraccion_hidrocarburos[vbp_va_ci_ccnn$anio == 2012]  *
+    anio > 2012 ~ ccnn_oficial$vbp_extraccion_hidrocarburos[ccnn_oficial$anio == 2012]  *
       vbp_criterio_ccnn_12,
     T ~ vbp_extraccion_hidrocarburos),
-    ci_extraccion_ccnn = vbp_extraccion_ccnn*coef_tecnico,
+    ci_extraccion_ccnn = vbp_extraccion_ccnn*coef_tecnico_97,
     # ci_extraccion_ccnn = vbp_extraccion_ccnn*mean_coef_req_extr_ccnn,
     va_extraccion_ccnn = vbp_extraccion_ccnn- ci_extraccion_ccnn,
     unidad = "Millones de pesos corrientes") %>%
@@ -3913,7 +3927,7 @@ pv_hidrocarburos_propia <-  vbp_va_ci_propia %>%
         excedente_bruto_explotacion =  valor_agregado - masa_salarial - consumo_k_fijo)
   
 # "Criterio propio con VBP CCNN" 
-pv_hidrocarburos <- pv_hidrocarburos_ccnn %>% 
+pv_hidrocarburos <- ccnn_oficial %>% 
   rename(vbp_ccnn = valor_bruto_produccion,
          va_ccnn = valor_agregado,
          ci_ccnn = consumo_intermedio,
@@ -3931,18 +3945,18 @@ pv_hidrocarburos <- pv_hidrocarburos_ccnn %>%
                      ci = ci_extraccion_ccnn, ms = ms_ccnn)) %>% 
   arrange(anio) %>% 
   mutate(vbp = vbp_criterio_propio ,
-         # ci = case_when(is.na(ci_ccnn) ~ vbp_criterio_ccnn * coef_tecnico  , T ~  ci_ccnn),
+         # ci = case_when(is.na(ci_ccnn) ~ vbp_criterio_ccnn * coef_tecnico_97  , T ~  ci_ccnn),
          va = vbp_criterio_propio - ci,
          # ms = case_when(is.na(ms_ccnn) ~ vbp_criterio_ccnn* mean_coef_ms, T ~  ms_ccnn),
          ebe =  va - ms -consumo_k_fijo_propio)
           
 
 ###
-valor_total_produccion <- pv_hidrocarburos_ccnn %>%  # no tiene descontado servicios
+valor_total_produccion <- ccnn_oficial %>%  # no tiene descontado servicios
  mutate(fuente = "CCNN") %>% 
    full_join(pv_hidrocarburos_propia %>% 
               select(anio, consumo_k_fijo)) %>%  
-  select(anio, unidad, fuente,valor_bruto_produccion,valor_agregado,
+  select(anio, unidad, fuente,vbp_extraccion,valor_agregado,
          consumo_intermedio, masa_salarial, excedente_bruto_explotacion, consumo_k_fijo) %>% 
   gather(key = variable,
          value = valor,
@@ -4046,7 +4060,7 @@ vbp_va_ci_propia %>%
 
 
 
-# Cálculos de Tasa de Ganancia
+# Tasa de Ganancia
 
 
 $$TG_{hidrocarburos} = \frac{PV_{hidrocarburífera}}{KTA_{hidrocarburífero}}$$
@@ -4062,7 +4076,6 @@ petrobras_arg_segmentos <- read_csv("C:/Archivos/Datos/Balances/gas y petroleo_d
 
 ypf_segmentos <- read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultados/ypf_segmentos.csv", 
     col_types = cols(X1 = col_skip()))
-
 
 ```
 
